--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,16 +1,29 @@
 @charset "utf-8";
 /* CSS Document */
 html{
+    font-family: 'Oxygen', sans-serif;
+    font-size: 22;
+	color: #e5e5e5;
 }
 body{
 	margin: 0;
 	padding: 0;
-	background: #e7ecf0;
-	font-family: Arial, Helvetica, sans-serif;
+	background: #1e1e1e;
 }
 p{
-	font-size: 14px;
-	color: #373737;
-	font-family: Arial, Helvetica, sans-serif;
-	line-height: 18px;
+    letter-spacing: 1;
+    margin: auto;
+    margin-top: 20px;
+}
+a{
+    color: #e5e5e5;
+    text-decoration: none;
+}
+.title-text{
+    font-size: 54;
+    letter-spacing: 5;
+}
+.centered{
+    margin: 0 auto;
+    width: 400px;
 }
