--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,14 +1,20 @@
 @charset "utf-8";
+
+:root{
+    --bg-color: #1E1E1E;
+    --text-color: #E5E5E5;
+}
+
 /* CSS Document */
 html{
     font-family: 'Oxygen', sans-serif;
     font-size: 22;
-	color: #e5e5e5;
+	color: var(--text-color);
 }
 body{
 	margin: 0;
 	padding: 0;
-	background: #1e1e1e;
+	background: var(--bg-color);
 }
 p{
     letter-spacing: 1;
@@ -16,11 +22,11 @@ p{
     margin-top: 20px;
 }
 a{
-    color: #e5e5e5;
+    color: var(--text-color);
     text-decoration: none;
 }
-.title-text{
-    font-size: 54;
+h1{
+    font-size: 50;
     letter-spacing: 5;
 }
 .main-div{
