--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -32,11 +32,13 @@ h1{
 .main-div{
     margin: 0 auto;
     margin-top: 80px;
-    width: 800px;
+    margin-left: 12%;
+    margin-right: 5%;
+    /*width: 80%;*/
 }
 .link-container{
     margin-top:5px;
 }
 .my-icons{
-    height: 18px;
+    height: 16px;
 }
